--- a/app.json
+++ b/app.json
@@ -1,8 +1,8 @@
 {
   "pages": [
     "pages/index/index",
-    "pages/me/me",
-    "pages/share/share"
+    "pages/share/share",
+    "pages/setting/setting"
   ],
   "window": {
     "backgroundColor": "#fff",
